Minor textual changes.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/load-formats.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/load-formats.html
@@ -12,6 +12,7 @@
 <li><a href="fits-read.html">FITS</a>
 <li><a href="votable-read.html">VOTable</a>
 <li><a href="jdbc-read.html">SQL Database</a>
+<li><a href="text-read.html">Plain Text</a>
 <li><a href="wdc-read.html">World Data Centre format</a>
 </ul>
 
