--- a/topcat/src/resources/uk/ac/starlink/topcat/help/wdc-read.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/wdc-read.html
@@ -10,7 +10,7 @@
 
 <p>Some support is provided for files produced by the 
 <a href="http://www.wdc.rl.ac.uk/">World Data Centre
-for Solar Terrestrial Physics</a>
+for Solar Terrestrial Physics</a>.
 The format itself apparently has no name, but files in this format
 look something like the following:
 <pre>
