Minor changes to a couple of doc files to track library changes.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc.html
@@ -56,11 +56,8 @@ TOPCAT has so far only been used with the following RDBMSs and drivers:
     driver which can cause a ClassCastException error when tables are written.
 
 <dt><a href="http://www.postgresql.org/">PostgreSQL</a>
-<dd>PostgreSQL 7.3.3 has been used, and its JDBC driver has a bug
-    which prevents correct operation.  Jonathan Irwin has kindly
-    submitted a
-    <a href="http://www.ast.cam.ac.uk/~jmi/postgresql/">fix for this</a>.
-
+<dd>PostgreSQL 7.4.1 apparently works with the driver it comes with.
+    Thanks to Jonathan Irwin for writing a patch to make this work.
 </dl>
 
 <p>Other RDBMSs and drivers may or may not work - please let us know the
