--- a/votable/src/main/uk/ac/starlink/votable/package.html
+++ b/votable/src/main/uk/ac/starlink/votable/package.html
@@ -1,29 +1,5 @@
 <body>
-Classes for parsing VOTables from XML, and an implementation of StarTable
-based on these.
-The classes in this package fall into the following categories:
-<dl>
-<dt>VOTable structure classes:
-<dd>Classes associated with the various elements in the VOTable DTD
-    which define the hierarchical structure of a VOTable document.
-    This sort of thing is similar to what can be provided by running
-    an XML binding tool such as Breeze, though they are in this case
-    hand written which leads to classes which are more compact and
-    in most cases easier to use.
-<dt>Table data access classes:
-<dd>The <tt>TableElement</tt> class itself is a VOTable structure class, but
-    has methods which cause the table cells themselves to be read 
-    (from embedded XML or a stream) and returned.
-    Most of the classes which do the work for this decoding are currently 
-    package-private out of general conservatism and because you don't
-    need any more than the methods on Table to get the table data.
-    However, they could be publicised if there was some reason this
-    was wanted.
-<dt>Compatibility classes:
-<dd>The {@link uk.ac.starlink.votable.VOStarTable} 
-    and {@link uk.ac.starlink.votable.VOTableWriter}
-    classes implement interfaces defined in the <tt>table</tt> package.
-</dl>
+Classes for VOTable input and output.
 
 <p>Elements in the VOTable DTD are represented by instances of
 {@link uk.ac.starlink.votable.VOElement} 
@@ -55,14 +31,17 @@ the parse, and the screed of base64 text is not included in the DOM.
 The user doesn't have to worry about all this of course, but it has
 the effect that the parsing is fast and as memory-efficient as possible.
 If the parsing has already been done (a DOMSource constructor is used
-to construct a the VOElement instances) the library will use the 
+to construct the VOElement instances) the library will use the 
 text data in DOM nodes which exist in the presented DOM (it will not
 excise them from the given DOM).
 
 <h2>Implementation Status</h2>
-These classes currently provide read-only access to VOTables
-according to the VOTable DTD version 1.0.
+These classes support (with a very few exceptions) to the 
+VOTable DTD version 1.0.
 All three defined data implementations (TABLEDATA, FITS and BINARY)
 are fully supported for input and output.
+
+@see  <a href="http://www.star.bris.ac.uk/~mbt/stil/">STIL</a>
+
 
 </body>
