Added documentation of a couple of new features.

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/script.html
@@ -29,6 +29,10 @@ or
           http://astro.org/data/m31.xml
 </pre>
 
+<p>A further alternative is to give the name of a directory on the command
+line.  This will pop up the hierarchy browser pointing at that directory
+so you can select a table by clicking on it.
+
 <p>In addition, any arguments which start "-X" or "-D" are passed as flags
 to the Java runtime.
 The main use of this is to modify the size of memory available to the
