--- a/topcat/src/resources/uk/ac/starlink/topcat/help/write.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/write.html
@@ -68,5 +68,8 @@ and this cannot be stored in a FITS table.  In this case the table
 may be written with such columns missing.  Some message to this effect
 should be output in this case.
 
+<p>You can also export a table by dragging it off the <kbd>Save</kbd>
+button on the toolbar onto a cooperating application (e.g. Treeview).
+
 </body>
 </html>
