--- a/votable/src/main/uk/ac/starlink/votable/dom/package.html
+++ b/votable/src/main/uk/ac/starlink/votable/dom/package.html
@@ -13,7 +13,7 @@ This tree can be obtained in any of the usual ways
 <p>When extending these classes, you need to take some care that the
 nodes released to the user are the delegating nodes and not the
 delegate ('base') nodes on which they are based.
-See {@link DelegatingDocument} 
+See {@link uk.ac.starlink.votable.dom.DelegatingDocument} 
 for how to go about extending the implementation.
 
 @author   Mark Taylor (Starlink)
