--- a/table/src/main/uk/ac/starlink/table/join/package.html
+++ b/table/src/main/uk/ac/starlink/table/join/package.html
@@ -3,7 +3,7 @@
 <body>
 Classes for performing table joins by matching rows to each other.
 The matching is done in an entirely configurable and pluggable way
-by defining a {@link uk.ac.starlink.join.MatchEngine} which defines
+by defining a {@link uk.ac.starlink.table.join.MatchEngine} which defines
 what counts as a match between two tuples (rows) and can be used to
 work out what counts as a near miss too.  Matching is (except in 
 pathological cases) an O(N) process,
