--- a/table/src/main/uk/ac/starlink/table/gui/package.html
+++ b/table/src/main/uk/ac/starlink/table/gui/package.html
@@ -1,4 +1,8 @@
 <body>
 Provides graphical classes used for rendering StarTable objects,
 and related utility functionality.
+The {@link uk.ac.starlink.table.gui.StarTableChooser} 
+class provides a simple way of allowing a user
+to select and load a table from disk or by querying an SQL database or
+using other graphical methods.
 </body>
