--- a/votable/src/main/uk/ac/starlink/votable/soap/package.html
+++ b/votable/src/main/uk/ac/starlink/votable/soap/package.html
@@ -6,7 +6,7 @@ bulk data as a BINARY inline stream element, since this will be the
 most space-efficient way of doing it.
 
 <p>The appropriate parameter type is given by
-{@link uk.ac.starlink.votable.soap.AxisTableSerializer#QNAME_VOTABLE}.
+{@link uk.ac.starlink.votable.soap.VOTableSerialization#QNAME_VOTABLE}.
 
 <p>Although in principle these should work with any JAX-RPC implementation,
 in practice there are several places where the code has had to be
