Package reorganisation.  All tpipe implementation classes are now in new subpackage uk.ac.starlink.ttools.pipe, with just the common utility classes and top-level TablePipe class in the ttools package itself. This is to stop ttools getting too cluttered.

--- a/ttools/src/main/uk/ac/starlink/ttools/package.html
+++ b/ttools/src/main/uk/ac/starlink/ttools/package.html
@@ -1,3 +1,6 @@
 <body>
 Command-line tools for table manipulation.
+This package contains common utility classes for the TTOOLS and the
+top-level classes with main() methods which can be used to invoke the
+tools from the command line.
 </body>
