--- a/ttools/src/main/uk/ac/starlink/ttools/package.html
+++ b/ttools/src/main/uk/ac/starlink/ttools/package.html
@@ -1,6 +1,8 @@
 <body>
 Command-line tools for table manipulation.
-This package contains common utility classes for the TTOOLS and the
-top-level classes with main() methods which can be used to invoke the
-tools from the command line.
+This package contains the classes used for the STILTS package, 
+including the {@link uk.ac.starlink.ttools.Stilts} class itself 
+which provides the task launcher.
+It also contains some classes which can be reused by other applications
+such as TOPCAT.
 </body>
